Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,8 @@ white - #ffffff;
 black - #000000;
 */
 
-
 * {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin: 0px;
     padding: 0px;
 }
@@ -28,6 +27,19 @@ body {
     font-family: 'Quicksand', sans-serif;
 }
 
+.header,
+.sub-header {
+    color: white;
+}
+
+.header {
+    margin-top: 10px;
+}
+
+.sub-header {
+    margin-top: 100px;
+}
+
 .message-form {
     display: flex;
     flex-direction: column;
@@ -35,7 +47,26 @@ body {
     align-items: center;
     background-color: white;
     width: 50%;
-    height: 20%;
+    height: 12%;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 90px;
+    margin-top: 10px;
+    border-radius: 10px;
+}
+
+label {
+    font-style: italic;
+    margin-right: 20px;
+    margin-left: 0px;
+}
+
+input {
+    margin-left: 60px;
+}
+
+#affirmation {
+    margin-left: 10px;
 }
 
 .message-center {
@@ -45,7 +76,8 @@ body {
     width: 75%;
     height: 20%;
     background-color: white;
-    margin-top: 20px;
+    margin-top: 10px;
+    border-radius: 10px;
 }
 
 img {
